# ToDoAPI

./: .gitignore  README.md  data.db  pyproject.toml
src/: app.py  database.py
src/api/: crud.py  models.py  schemas.py  views.py
